# crystalbuilder

./: .gitignore  __init__.py  _version.py  convert.py  geometry.py  lattice.py  lumerical_methods.py  meep_methods.py  pyproject.toml  setup.py  vectors.py  version.py
.github/workflows/: release.yml
crystalbuilder/: __init__.py  bilbao.py  convert.py  geometry.py  lattice.py  lumpy_convert.py  viewer.py
crystalbuilder/conversions/: __init__.py  t3d.py
docs/: _requirements.txt  conf.py  index.rst
docs/source/: crystalbuilder.rst  diamond_examples.rst  getting_started.rst  modules.rst
examples/: BilbaoGyroidApprox.py  BilbaoGyroidExample.ipynb  DualVortex-Analysis.py  DualVortex-Working1.py  LumericalOutput.py  SRSNetworkExample.ipynb  SimplePhC.py  SpaceGroup180.ipynb  Tetrahedral.ipynb  core_shell_diamond.ipynb  diamond_lattice-square-CoreShell.ipynb  diamond_lattice-square.ipynb  diamond_lattice.ipynb  diamond_lattice_square.ipynb  lattice_testing.ipynb  viewing_test.py
examples/DiamondPhCs/: MPB-DiamondSpheres.ipynb  diamond_lattice-square-CoreShell.ipynb  diamond_lattice-square.ipynb  diamond_lattice.ipynb
examples/ExtraFeatures/: SpaceGroup180.ipynb
examples/OtherPhCs/: Tetrahedral.ipynb
examples/Tidy3D/: Tidy3D-DiamondCoreShell.ipynb  Tidy3D-PlottingAnalysis.ipynb  TidyTesting.ipynb
examples/VedoAndMPB/DiamondPhCs/: core_shell_diamond.ipynb  diamond_lattice-square.ipynb
examples/VedoAndMPB/OtherPhCs/: Tetrahedral.ipynb
